# komorebi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Tutorial.md  config.vala.in  komorebi.spec  meson.build
cmake/: GObjectIntrospectionMacros.cmake  GSettings.cmake
data/: meson.build
data/Other/: komorebi.desktop  org.komorebiteam.komorebi.appdata.xml.in  org.komorebiteam.komorebi.desktop.in  org.komorebiteam.wallpapercreator.appdata.xml.in  org.komorebiteam.wallpapercreator.desktop.in  postinst  postrm  update_wallpapers.sh  wallpapercreator.desktop
data/Wallpapers/abstract_light_lines/: config
data/Wallpapers/aerial_mountain_and_ocean/: config
data/Wallpapers/aurora_video/: config
data/Wallpapers/beach_space_view/: config
data/Wallpapers/blue_pink_gradient/: config
data/Wallpapers/canyon_night_sky/: config
data/Wallpapers/city_lights/: config
data/Wallpapers/cloudy_forest/: config
data/Wallpapers/dark_forest/: config
data/Wallpapers/dark_night_gradient/: config
data/Wallpapers/day_night_mountain/: config
data/Wallpapers/deck_sea_fog/: config
data/Wallpapers/direction_to_time/: config
data/Wallpapers/foggy_sunny_mountain/: config
data/Wallpapers/graffiti/: config
data/Wallpapers/grainy_day/: config
data/Wallpapers/icy_mountains/: config
data/Wallpapers/mountain_lake_at_night/: config
data/Wallpapers/on_a_mountain_hill/: config
data/Wallpapers/parallax_cartoon_mountain/: config
data/Wallpapers/parallax_man_mountain/: config
data/Wallpapers/parallax_sky/: config
data/Wallpapers/plane_window/: config
data/Wallpapers/sahara-day-and-night/: config
data/Wallpapers/saharan_adventure/: config
data/Wallpapers/sunny_sand/: config
data/Wallpapers/tree_reflection_video/: config
data/Wallpapers/underground_passageway/: config
data/Wallpapers/unsplash/: config
data/Wallpapers/yosemite_cloudy/: config
data/resources/: komorebi.gresource.xml
extra/wallpaper-creator/: Main.vala
extra/wallpaper-creator/OnScreen/: FinalPage.vala  InitialPage.vala  NewWallpaperWindow.vala  OptionsPage.vala
po/: LINGUAS
src/: Main.vala  Paths.vala  Utilities.vala  meson.build
src/OnScreen/: AssetActor.vala  BackgroundWindow.vala  BubbleMenu.vala  BubbleMenuItem.vala  DateTimeBox.vala  DesktopIcons.vala  Icon.vala  InfoBox.vala  InfoWindow.vala  PreferencesWindow.vala  ResponsiveGrid.vala  RowLabel.vala  Thumbnail.vala  WallpapersSelector.vala
vapi/: glibtop.vapi
wallpaper-creator/: Main.vala  meson.build
wallpaper-creator/OnScreen/: FinalPage.vala  InitialPage.vala  NewWallpaperWindow.vala  OptionsPage.vala
