main_sources += files(
    'Main.vala',
    'OnScreen/BackgroundWindow.vala',
    'OnScreen/DateTimeBox.vala',
    'OnScreen/DesktopIcons.vala',
    'OnScreen/ResponsiveGrid.vala',
    'OnScreen/Icon.vala',
    'OnScreen/InfoWindow.vala',
    'OnScreen/RowLabel.vala',
    'OnScreen/WallpapersSelector.vala',
    'OnScreen/Thumbnail.vala',
    'OnScreen/BubbleMenu.vala',
    'OnScreen/BubbleMenuItem.vala',
    'OnScreen/AssetActor.vala',
    'OnScreen/PreferencesWindow.vala',
    'Paths.vala',
    'Utilities.vala'
)
